crates/relune-app/tests/snapshots/fixture_render_audit__fixture_render_audit__ecommerce.snap
---
source: crates/relune-app/tests/fixture_render_audit.rs
expression: "fixture_audit_snapshot(\"ecommerce.sql\")"
---
{
  "fixture": "ecommerce.sql",
  "layout": {
    "edge_count": 7,
    "height": 1042.0,
    "node_count": 7,
    "width": 1637.4000244140625
  },
  "patterns": {
    "long_detours": {
      "count_over_1_8x": 0,
      "worst_examples": [
        "order_items[product_id] -> products[id] (1.37x)",
        "addresses[customer_id] -> customers[id] (1.00x)",
        "order_items[order_id] -> orders[id] (1.00x)"
      ]
    },
    "parallel_groups": {
      "count": 0,
      "examples": [],
      "max_size": 0
    },
    "reverse_edges": {
      "count": 6,
      "examples": [
        "addresses[customer_id] -> customers[id] (rank 1 -> 0, bends 2)",
        "order_items[order_id] -> orders[id] (rank 2 -> 1, bends 2)",
        "order_items[product_id] -> products[id] (rank 2 -> 0, bends 4)"
      ]
    },
    "same_rank_edges": {
      "count": 1,
      "examples": [
        "categories[parent_id] -> categories[id] (rank 0 -> 0, bends 2)"
      ]
    },
    "tight_clearance": {
      "count_under_24px": 1,
      "worst_examples": [
        "product_categories[category_id] -> categories[id] (16.0px)",
        "order_items[product_id] -> products[id] (24.0px)",
        "addresses[customer_id] -> customers[id] (40.0px)"
      ]
    }
  },
  "surfaces": {
    "html": {
      "bytes": 430855,
      "contains_embedded_svg": true,
      "contains_metadata": true,
      "contains_viewport": true
    },
    "svg": {
      "bytes": 61696,
      "edge_groups": 28,
      "node_groups": 7
    }
  }
}
