crates/relune-app/tests/snapshots/fixture_render_audit__fixture_render_audit__join_heavy.snap
---
source: crates/relune-app/tests/fixture_render_audit.rs
expression: "fixture_audit_snapshot(\"join_heavy.sql\")"
---
{
  "fixture": "join_heavy.sql",
  "layout": {
    "edge_count": 40,
    "height": 1642.0,
    "node_count": 23,
    "width": 4597.0
  },
  "patterns": {
    "long_detours": {
      "count_over_1_8x": 1,
      "worst_examples": [
        "attachments[tenant_id] -> tenants[id] (1.90x)",
        "task_watchers[user_id] -> users[id] (1.79x)",
        "project_watchers[user_id] -> users[id] (1.69x)"
      ]
    },
    "parallel_groups": {
      "count": 3,
      "examples": [
        "task_dependencies <-> tasks (2)",
        "tasks <-> users (2)",
        "user_roles <-> users (2)"
      ],
      "max_size": 2
    },
    "reverse_edges": {
      "count": 39,
      "examples": [
        "activities[actor_id] -> users[id] (rank 2 -> 1, bends 2)",
        "activities[tenant_id] -> tenants[id] (rank 2 -> 0, bends 4)",
        "attachments[tenant_id] -> tenants[id] (rank 2 -> 0, bends 4)"
      ]
    },
    "same_rank_edges": {
      "count": 1,
      "examples": [
        "comments[parent_id] -> comments[id] (rank 2 -> 2, bends 2)"
      ]
    },
    "tight_clearance": {
      "count_under_24px": 9,
      "worst_examples": [
        "role_permissions[permission_id] -> permissions[id] (15.0px)",
        "task_watchers[user_id] -> users[id] (15.9px)",
        "role_permissions[role_id] -> roles[id] (16.0px)"
      ]
    }
  },
  "surfaces": {
    "html": {
      "bytes": 590593,
      "contains_embedded_svg": true,
      "contains_metadata": true,
      "contains_viewport": true
    },
    "svg": {
      "bytes": 208411,
      "edge_groups": 160,
      "node_groups": 23
    }
  }
}
