crates/relune-app/tests/snapshots/fixture_render_audit__fixture_render_audit__multi_schema.snap
---
source: crates/relune-app/tests/fixture_render_audit.rs
expression: "fixture_audit_snapshot(\"multi_schema.sql\")"
---
{
  "fixture": "multi_schema.sql",
  "layout": {
    "edge_count": 6,
    "height": 954.0,
    "node_count": 7,
    "width": 1740.4000244140625
  },
  "patterns": {
    "long_detours": {
      "count_over_1_8x": 1,
      "worst_examples": [
        "sales.order_items[product_id] -> inventory.products[id] (2.43x)",
        "inventory.stock[product_id] -> inventory.products[id] (1.00x)",
        "public.posts[author_id] -> public.users[id] (1.00x)"
      ]
    },
    "parallel_groups": {
      "count": 0,
      "examples": [],
      "max_size": 0
    },
    "reverse_edges": {
      "count": 6,
      "examples": [
        "inventory.stock[product_id] -> inventory.products[id] (rank 1 -> 0, bends 2)",
        "public.posts[author_id] -> public.users[id] (rank 1 -> 0, bends 2)",
        "sales.order_items[order_id] -> sales.orders[id] (rank 2 -> 1, bends 2)"
      ]
    },
    "same_rank_edges": {
      "count": 0,
      "examples": []
    },
    "tight_clearance": {
      "count_under_24px": 0,
      "worst_examples": [
        "sales.order_items[product_id] -> inventory.products[id] (24.0px)",
        "sales.order_items[order_id] -> sales.orders[id] (81.6px)",
        "sales.orders[customer_id] -> public.users[id] (134.3px)"
      ]
    }
  },
  "surfaces": {
    "html": {
      "bytes": 431767,
      "contains_embedded_svg": true,
      "contains_metadata": true,
      "contains_viewport": true
    },
    "svg": {
      "bytes": 56586,
      "edge_groups": 24,
      "node_groups": 7
    }
  }
}
