crates/relune-app/tests/snapshots/fixture_render_audit__fixture_render_audit__simple_blog.snap
---
source: crates/relune-app/tests/fixture_render_audit.rs
expression: "fixture_audit_snapshot(\"simple_blog.sql\")"
---
{
  "fixture": "simple_blog.sql",
  "layout": {
    "edge_count": 3,
    "height": 704.0,
    "node_count": 3,
    "width": 448.3999938964844
  },
  "patterns": {
    "long_detours": {
      "count_over_1_8x": 1,
      "worst_examples": [
        "comments[user_id] -> users[id] (2.11x)",
        "comments[post_id] -> posts[id] (1.00x)",
        "posts[user_id] -> users[id] (1.00x)"
      ]
    },
    "parallel_groups": {
      "count": 0,
      "examples": [],
      "max_size": 0
    },
    "reverse_edges": {
      "count": 3,
      "examples": [
        "comments[post_id] -> posts[id] (rank 2 -> 1, bends 2)",
        "comments[user_id] -> users[id] (rank 2 -> 0, bends 4)",
        "posts[user_id] -> users[id] (rank 1 -> 0, bends 2)"
      ]
    },
    "same_rank_edges": {
      "count": 0,
      "examples": []
    },
    "tight_clearance": {
      "count_under_24px": 0,
      "worst_examples": [
        "comments[user_id] -> users[id] (24.0px)",
        "comments[post_id] -> posts[id] (256.0px)",
        "posts[user_id] -> users[id] (256.0px)"
      ]
    }
  },
  "surfaces": {
    "html": {
      "bytes": 382337,
      "contains_embedded_svg": true,
      "contains_metadata": true,
      "contains_viewport": true
    },
    "svg": {
      "bytes": 23448,
      "edge_groups": 18,
      "node_groups": 3
    }
  }
}
